# portfolio-tracker

./: .env-sample  .gitignore  Cargo.toml  LICENSE
migrations/: 20220415191926_create_trades_table.up.sql  20220421171806_create_prices_table.up.sql
src/: db.rs  env.rs  main.rs  trade.rs
