[package]
name = "portfolio-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.5.1"
serde = {version = "1.0.136", features = ["derive"] }
rusqlite = { version = "0.27.0", features = ["bundled"] }
