[package]
name = "portfolio-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.5.1"
serde = {version = "1.0.136", features = ["std", "derive"] }
serde_json = { version = "1.0.79", features = ["std"], default-features = false }
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "sqlite" ] }
anyhow = "1.0"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"

